vlib/v/checker/tests/anon_fn_without_body.vv
module main

fn main() {
	func := fn () int

	println(func())
}
